completed final project

--- a/project/index.html
+++ b/project/index.html
@@ -13,6 +13,7 @@
     <meta property="og:image" content="https://delpipi.github.io/wdd231/project/images/meagui-hospital.webp">
     <meta property="og:url" content="https://delpipi.github.io/wdd231/project">
     <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/base-large.css">
     <link rel="stylesheet" href="styles/home.css">
@@ -26,7 +27,7 @@
 
     <header>
         <div class="logo">
-            <img src="images/logo.svg" alt="Compagny Logo" width="200">
+            <img src="images/logo.svg" alt="Compagny Logo" width="150">
         </div>
         <a href="#" id="menu" aria-label="Menu"></a>
         <nav>
@@ -104,7 +105,7 @@
                 <p>Malaria remains a significant public health challenge in Côte d'Ivoire, with an incidence of 268
                     cases per 1,000 inhabitants in 2023. While mortality has decreased by over 50% since 2017, the
                     disease continues to affect vulnerable populations</p>
-                <a href="#" class="more-info">Learn more</a>
+                <a href="https://www.who.int/countries/civ/" class="more-info">Learn more</a>
             </section>
 
             <section class="card">
@@ -113,7 +114,7 @@
                     class="img-responsive">
                 <p>Polio remains a concern in Côte d’Ivoire due to vaccine-derived virus strains. In 2024, over 9
                     million children were vaccinated in nationwide campaigns to stop the spread.</p>
-                <a href="#" class="more-info">Learn more</a>
+                <a href="https://www.who.int/countries/civ/" class="more-info">Learn more</a>
             </section>
 
             <section class="card">
@@ -124,11 +125,18 @@
                     diphtheria, tetanus, and pertussis (DTP3) vaccine. Measles vaccination coverage for children aged
                     12–23 months was 70% in 2020. These figures indicate progress but also highlight areas needing
                     improvement</p>
-                <a href="#" class="more-info">Learn more</a>
+                <a href="https://www.who.int/countries/civ/" class="more-info">Learn more</a>
             </section>
 
         </section>
 
+        <dialog id="dialogBox">
+            <div>
+                <h3>Visitor</h3>
+                <button>X</button>
+            </div>
+            <p></p>
+        </dialog>
     </main>
 
     <footer>
