--- a/project/tips.html
+++ b/project/tips.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <meta charset="utf-8">
@@ -8,7 +8,7 @@
     <meta name="description" content="WDD 231 - Final Project | Côte d'Ivoire HealthCare | Tips & Statistics  Page">
     <meta name="author" content="Kouame Alexandre Paul">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Côte d'Ivoire HealthCare - Home page">
+    <meta property="og:title" content="Côte d'Ivoire HealthCare - Tips & Statistics page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://delpipi.github.io/wdd231/project/images/meagui-hospital.webp">
     <meta property="og:url" content="https://delpipi.github.io/wdd231/project">
@@ -26,7 +26,7 @@
 
     <header>
         <div class="logo">
-            <img src="images/logo.svg" alt="Compagny Logo" width="200">
+            <img src="images/logo.svg" alt="Compagny Logo" width="150">
         </div>
         <a href="#" id="menu" aria-label="Menu"></a>
         <nav>
@@ -66,7 +66,7 @@
                         pilot programs. Encourage vaccination when available!</li>
                 </ul>
                 <a href="https://www.who.int/news-room/fact-sheets/detail/malaria" target="_blank"
-                    class="more-info">More Info</a>
+                    class="more-info">Malaria more Info</a>
             </section>
         </section>
 
@@ -91,7 +91,7 @@
                         before meals and after the toilet.</li>
                 </ul>
                 <a href="https://www.who.int/news-room/fact-sheets/detail/poliomyelitis" target="_blank"
-                    class="more-info">More Info</a>
+                    class="more-info">Polio more Info</a>
             </section>
         </section>
 
@@ -115,7 +115,7 @@
                         modern preventive care like vaccines.</li>
                 </ul>
                 <a href="https://www.who.int/health-topics/vaccines-and-immunization#tab=tab_1" target="_blank"
-                    class="more-info">More Info</a>
+                    class="more-info">Vaccination More Info</a>
             </section>
         </section>
 
