--- a/project/contact.html
+++ b/project/contact.html
@@ -1,92 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Côte d'Ivoire HealthCare - Home page</title>
-    <meta name="description" content="WDD 231 - Final Project | Côte d'Ivoire HealthCare | Home Page">
+    <title>Côte d'Ivoire HealthCare - Contact page</title>
+    <meta name="description" content="WDD 231 - Final Project | Côte d'Ivoire HealthCare | Contact Page">
     <meta name="author" content="Kouame Alexandre Paul">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Côte d'Ivoire HealthCare - Home page">
+    <meta property="og:title" content="Côte d'Ivoire HealthCare - Contact page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://delpipi.github.io/wdd231/project/images/meagui-hospital.webp">
     <meta property="og:url" content="https://delpipi.github.io/wdd231/project">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/base-large.css">
-    <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="styles/home-large.css">
+    <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/contact-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
     <header>
         <div class="logo">
-            <img src="images/logo.svg" alt="Compagny Logo" width="200">
+            <img src="images/logo.svg" alt="Compagny Logo" width="150">
         </div>
-        <nav class="navigation">
+        <a href="#" id="menu" aria-label="Menu"></a>
+        <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="tips.html" class="active">Tips</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="tips.html">Tips</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
-        <div>
-            <h2>Send message to WHO Côte d'Ivoire</h2>
-            <form>
-                <label for="firsname">
-                    <input type="text" id="firsname" name="firsname" placeholder="First Name" required>
-                </label>
-                <label for="lastname">
-                    <input type="text" id="lastname" name="lastname" placeholder="Last Name" required>
-                </label>
-                <label for="phone">
-                    <input type="tel" id="phone" name="phone" placeholder="Mobile Contact" required>
-                </label>
-                <label for="email">
-                    <input type="tel" id="email" name="email" placeholder="Email" required>
-                </label>
-                <label for="message">
-                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                </label>
-            </form>
-        </div>
-        <div>
+        <section class="main-header">
+            <h1>Contact</h1>
+            <p>World Health Organization, Cote d'Ivoire</p>
+        </section>
+
+        <section class="contactLocation">
             <h2>Côte d'Ivoire WHO Office – Contact Information</h2>
             <h3>WHO Representative in Côte d'Ivoire: Dr. Lucien MANGA</h3>
-            <ul>
-                <li>
-                    Address:
-                    2 Plateaux – Boulevard des Martyrs
-                    01 BP 2494 Abidjan 01, Côte d'Ivoire
-                </li>
-                <li>Telephone: +225 22 51 72 00</li>
-                <li>Fax: +225 22 51 72 32</li>
-                <li>Email: afwcociwr@who.int</li>
-            </ul>
+            <p>
+                <strong>Address: </strong>
+                2 Plateaux – Boulevard des Martyrs
+                01 BP 2494 Abidjan 01, Côte d'Ivoire
+            </p>
+            <p><strong>Telephone:</strong> +225 22 51 72 00</p>
+            <p><strong>Fax:</strong> +225 22 51 72 32</p>
+            <p><strong>Email:</strong> afwcociwr@who.int</p>
             <a href="https://www.facebook.com/WHO/?locale=fr_FR" target="_blank"><img
-                    src="images/circle_facebook_icon.webp" alt="Facebook Icon"></a>
+                    src="images/circle_facebook_icon.webp" alt="Facebook Icon" width="40" height="40"></a>
             <a href="https://www.linkedin.com/company/world-health-organization" target="_blank"><img
-                    src="images/circle_linkedin_icon.webp" alt="Linkedin Icon"></a>
-        </div>
+                    src="images/circle_linkedin_icon.webp" alt="Linkedin Icon" width="40" height="40"></a>
+        </section>
+
+        <section class="contactForm">
+            <h2>Send message to WHO Côte d'Ivoire</h2>
+            <form id="contactForm">
+                <label for="firsname">First Name
+                    <input type="text" id="firsname" name="firsname" autocomplete="given-name" placeholder="First Name">
+                </label>
+                <label for="lastname">Last Name
+                    <input type="text" id="lastname" name="lastname" autocomplete="family-name" placeholder="Last Name">
+                </label>
+                <label for="phone">Mobile Contact
+                    <input type="tel" id="phone" name="phone" autocomplete="tel" placeholder="Mobile Contact">
+                </label>
+                <label for="email">Email *
+                    <input type="email" id="email" name="email" autocomplete="email" placeholder="Email" required>
+                </label>
+                <label for="message">Message *
+                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                </label>
+
+                <input type="submit" value="Send Message">
+            </form>
+        </section>
+
     </main>
     <footer>
-        <div class="">
-            <ul>
-                <li>&copy;<span id="currentYear"></span></li>
-                <li>WDD 231 - Final Project | Kouame Alexandre Paul - Abidjan, Cote d'Ivoire</li>
-                <li id="lastModified"></li>
-            </ul>
-        </div>
+        <p>&copy;<span id="currentYear"></span></p>
+        <p>WDD 231 - Final Project | Kouame Alexandre Paul - Abidjan, Cote d'Ivoire</p>
+        <p id="lastModified"></p>
     </footer>
-    <script src="scripts/api.js" async defer></script>
-    <script src="scripts/base.js" async defer></script>
-    <script src="scripts/tips.js" type="module"></script>
+    <script src="scripts/base.js" type="module"></script>
+    <script src="scripts/contact.js"></script>
 </body>
 
 </html>
