completed final project adding loading=lazy

--- a/project/tips.html
+++ b/project/tips.html
@@ -50,7 +50,8 @@
             <div id="malaria-stat"></div>
             <section class="tips-card">
                 <h3>Tips on Malaria </h3>
-                <img src="images/malaria-picture-for-tips.webp" alt="Child under mosquito net" class="img-responsive">
+                <img src="images/malaria-picture-for-tips.webp" alt="Child under mosquito net" class="img-responsive"
+                    loading="lazy">
                 <ul>
                     <li>Sleep under a mosquito net every night: Especially an insecticide-treated net (ITN). This is the
                         most effective prevention, particularly for children under 5 and pregnant women.
@@ -75,7 +76,8 @@
             <div id="polio-stat"></div>
             <section class="tips-card">
                 <h3>Tips on Polio</h3>
-                <img src="images/polio-picture-for-tips.webp" alt="Child with polio disease" class="img-responsive">
+                <img src="images/polio-picture-for-tips.webp" alt="Child with polio disease" class="img-responsive"
+                    loading="lazy">
                 <ul>
                     <li>Ensure children receive all polio vaccine doses: The oral polio vaccine (OPV) is free and safe
                         in
@@ -101,7 +103,7 @@
             <section class="tips-card">
                 <h3>General Vaccination Tips</h3>
                 <img src="images/vaccination-picture-for-tips.webp" alt="Child receive vaccination"
-                    class="img-responsive">
+                    class="img-responsive" loading="lazy">
                 <ul>
                     <li>Complete the routine immunization schedule: Vaccines for measles, TB, hepatitis B, yellow fever,
                         etc., are part of Côte d'Ivoire’s Expanded Program on Immunization (PEV).</li>
