--- a/project/index.html
+++ b/project/index.html
@@ -55,7 +55,8 @@
         </section>
 
         <section class="presentation">
-            <img src="images/civ.webp" alt="Cote d'Ivoire map" width="420" height="330" class="img-responsive">
+            <img src="images/civ.webp" alt="Cote d'Ivoire map" width="420" height="330" class="img-responsive"
+                loading="lazy">
             <h2>Cote d'Ivoire</h2>
             <table>
                 <caption><a href="http://www.who.int/countries/civ/en/" target="_blank" class="more-info">View more Data
@@ -101,7 +102,7 @@
             <section class="card">
                 <h3>Malaria</h3>
                 <img src="images/malaria-picture-for-home.webp" alt="Malaria picture" width="300" height="200"
-                    class="img-responsive">
+                    class="img-responsive" loading="lazy">
                 <p>Malaria remains a significant public health challenge in Côte d'Ivoire, with an incidence of 268
                     cases per 1,000 inhabitants in 2023. While mortality has decreased by over 50% since 2017, the
                     disease continues to affect vulnerable populations</p>
@@ -111,7 +112,7 @@
             <section class="card">
                 <h3>Polio</h3>
                 <img src="images/polio-picture-for-home.webp" alt="Children with polio picture" width="300" height="200"
-                    class="img-responsive">
+                    class="img-responsive" loading="lazy">
                 <p>Polio remains a concern in Côte d’Ivoire due to vaccine-derived virus strains. In 2024, over 9
                     million children were vaccinated in nationwide campaigns to stop the spread.</p>
                 <a href="https://www.who.int/countries/civ/" class="more-info">Learn more</a>
@@ -120,7 +121,7 @@
             <section class="card">
                 <h3>Vaccination</h3>
                 <img src="images/vaccination-picture-for-home.webp" alt="Children vaccinated picture" width="300"
-                    height="200" class="img-responsive">
+                    height="200" class="img-responsive" loading="lazy">
                 <p>As of 2019, approximately 76% of children in Côte d'Ivoire received all three doses of the
                     diphtheria, tetanus, and pertussis (DTP3) vaccine. Measles vaccination coverage for children aged
                     12–23 months was 70% in 2020. These figures indicate progress but also highlight areas needing
