updated project to solve some issue

--- a/project/tips.html
+++ b/project/tips.html
@@ -40,86 +40,104 @@
 
     <main>
 
-        <section class="main-header">
+        <section id="main-header">
             <h1>Health Tips & Statistics</h1>
             <p>Malaria, Polio & Vaccination</p>
         </section>
 
-        <section class="disease">
-            <h2>Malaria-related Indicators</h2>
-            <div id="malaria-stat"></div>
-            <section class="tips-card">
-                <h3>Tips on Malaria </h3>
-                <img src="images/malaria-picture-for-tips.webp" alt="Child under mosquito net" class="img-responsive"
-                    loading="lazy">
-                <ul>
-                    <li>Sleep under a mosquito net every night: Especially an insecticide-treated net (ITN). This is the
-                        most effective prevention, particularly for children under 5 and pregnant women.
+        <div id="main-content">
+            <div id="diseases">
+                <section class="disease">
+                    <h2>Malaria</h2>
+                    <p class="stat" id="malaria-stat"></p>
+                    <section class="tips-card">
+                        <h3>Tips on Malaria </h3>
+                        <img src="images/malaria-picture-for-tips.webp" alt="Child under mosquito net"
+                            class="img-responsive" loading="lazy">
+                        <ul>
+                            <li>Sleep under a mosquito net every night: Especially an insecticide-treated net (ITN).
+                                This is
+                                the
+                                most effective prevention, particularly for children under 5 and pregnant women.
 
-                    </li>
-                    <li>Get tested quickly if you have a fever: Malaria symptoms start with fever, chills, and
-                        headaches.
-                        Don’t wait — early diagnosis and treatment save lives</li>
-                    <li>Drain stagnant water around your house: Mosquitoes breed in still water — empty buckets, tires,
-                        flower pots, etc.</li>
-                    <li>Support vaccination programs: Côte d’Ivoire started using the RTS,S malaria vaccine for children
-                        in
-                        pilot programs. Encourage vaccination when available!</li>
-                </ul>
-                <a href="https://www.who.int/news-room/fact-sheets/detail/malaria" target="_blank"
-                    class="more-info">Malaria more Info</a>
-            </section>
-        </section>
+                            </li>
+                            <li>Get tested quickly if you have a fever: Malaria symptoms start with fever, chills, and
+                                headaches.
+                                Don’t wait — early diagnosis and treatment save lives</li>
+                            <li>Drain stagnant water around your house: Mosquitoes breed in still water — empty buckets,
+                                tires,
+                                flower pots, etc.</li>
+                            <li>Support vaccination programs: Côte d’Ivoire started using the RTS,S malaria vaccine for
+                                children
+                                in
+                                pilot programs. Encourage vaccination when available!</li>
+                        </ul>
+                        <a href="https://www.who.int/news-room/fact-sheets/detail/malaria" target="_blank"
+                            class="more-info">Malaria more Info</a>
+                    </section>
+                </section>
 
-        <section class="disease">
-            <h2>Polio-related Indicators</h2>
-            <div id="polio-stat"></div>
-            <section class="tips-card">
-                <h3>Tips on Polio</h3>
-                <img src="images/polio-picture-for-tips.webp" alt="Child with polio disease" class="img-responsive"
-                    loading="lazy">
-                <ul>
-                    <li>Ensure children receive all polio vaccine doses: The oral polio vaccine (OPV) is free and safe
-                        in
-                        Côte d'Ivoire. Several campaigns are organized regularly — don't miss them!</li>
-                    <li>Check for vaccine cards: Make sure your child’s vaccine record is up-to-date. Full protection
-                        needs
-                        multiple doses.</li>
-                    <li>Spread the word, not the virus: Talk to your neighbors and relatives about the importance of
-                        polio
-                        vaccines, especially in rural areas.</li>
-                    <li>Keep hygiene high: Polio spreads through contaminated water or food — always wash hands with
-                        soap
-                        before meals and after the toilet.</li>
-                </ul>
-                <a href="https://www.who.int/news-room/fact-sheets/detail/poliomyelitis" target="_blank"
-                    class="more-info">Polio more Info</a>
-            </section>
-        </section>
+                <section class="disease">
+                    <h2>Polio</h2>
+                    <p class="stat" id="polio-stat"></p>
+                    <section class="tips-card">
+                        <h3>Tips on Polio</h3>
+                        <img src="images/polio-picture-for-tips.webp" alt="Child with polio disease"
+                            class="img-responsive" loading="lazy">
+                        <ul>
+                            <li>Ensure children receive all polio vaccine doses: The oral polio vaccine (OPV) is free
+                                and
+                                safe
+                                in
+                                Côte d'Ivoire. Several campaigns are organized regularly — don't miss them!</li>
+                            <li>Check for vaccine cards: Make sure your child’s vaccine record is up-to-date. Full
+                                protection
+                                needs
+                                multiple doses.</li>
+                            <li>Spread the word, not the virus: Talk to your neighbors and relatives about the
+                                importance of
+                                polio
+                                vaccines, especially in rural areas.</li>
+                            <li>Keep hygiene high: Polio spreads through contaminated water or food — always wash hands
+                                with
+                                soap
+                                before meals and after the toilet.</li>
+                        </ul>
+                        <a href="https://www.who.int/news-room/fact-sheets/detail/poliomyelitis" target="_blank"
+                            class="more-info">Polio more Info</a>
+                    </section>
+                </section>
 
-        <section class="disease">
-            <h2>Vaccination Indicators</h2>
-            <div id="vaccination-stat"></div>
-            <section class="tips-card">
-                <h3>General Vaccination Tips</h3>
-                <img src="images/vaccination-picture-for-tips.webp" alt="Child receive vaccination"
-                    class="img-responsive" loading="lazy">
-                <ul>
-                    <li>Complete the routine immunization schedule: Vaccines for measles, TB, hepatitis B, yellow fever,
-                        etc., are part of Côte d'Ivoire’s Expanded Program on Immunization (PEV).</li>
-                    <li>Vaccinate on time: Delays reduce effectiveness. Follow the schedule at local clinics or during
-                        vaccination days.</li>
-                    <li>Vaccines are free in public health centers: Many vaccines for children and mothers are offered
-                        free
-                        of charge in public facilities.</li>
-                    <li>Don’t rely on traditional medicine alone: Encourage families to combine traditional knowledge
-                        with
-                        modern preventive care like vaccines.</li>
-                </ul>
-                <a href="https://www.who.int/health-topics/vaccines-and-immunization#tab=tab_1" target="_blank"
-                    class="more-info">Vaccination More Info</a>
-            </section>
-        </section>
+                <section class="disease">
+                    <h2>Vaccination</h2>
+                    <p class="stat" id="vaccination-stat"></p>
+                    <section class="tips-card">
+                        <h3>General Vaccination Tips</h3>
+                        <img src="images/vaccination-picture-for-tips.webp" alt="Child receive vaccination"
+                            class="img-responsive" loading="lazy">
+                        <ul>
+                            <li>Complete the routine immunization schedule: Vaccines for measles, TB, hepatitis B,
+                                yellow
+                                fever,
+                                etc., are part of Côte d'Ivoire’s Expanded Program on Immunization (PEV).</li>
+                            <li>Vaccinate on time: Delays reduce effectiveness. Follow the schedule at local clinics or
+                                during
+                                vaccination days.</li>
+                            <li>Vaccines are free in public health centers: Many vaccines for children and mothers are
+                                offered
+                                free
+                                of charge in public facilities.</li>
+                            <li>Don’t rely on traditional medicine alone: Encourage families to combine traditional
+                                knowledge
+                                with
+                                modern preventive care like vaccines.</li>
+                        </ul>
+                        <a href="https://www.who.int/health-topics/vaccines-and-immunization#tab=tab_1" target="_blank"
+                            class="more-info">Vaccination More Info</a>
+                    </section>
+                </section>
+            </div>
+        </div>
 
     </main>
 
