--- a/project/contact.html
+++ b/project/contact.html
@@ -39,50 +39,51 @@
     </header>
 
     <main>
-        <section class="main-header">
+        <section id="main-header">
             <h1>Contact</h1>
             <p>World Health Organization, Cote d'Ivoire</p>
         </section>
 
-        <section class="contactLocation">
-            <h2>Côte d'Ivoire WHO Office – Contact Information</h2>
-            <h3>WHO Representative in Côte d'Ivoire: Dr. Lucien MANGA</h3>
-            <p>
-                <strong>Address: </strong>
-                2 Plateaux – Boulevard des Martyrs
-                01 BP 2494 Abidjan 01, Côte d'Ivoire
-            </p>
-            <p><strong>Telephone:</strong> +225 22 51 72 00</p>
-            <p><strong>Fax:</strong> +225 22 51 72 32</p>
-            <p><strong>Email:</strong> afwcociwr@who.int</p>
-            <a href="https://www.facebook.com/WHO/?locale=fr_FR" target="_blank"><img
-                    src="images/circle_facebook_icon.webp" alt="Facebook Icon" width="40" height="40"></a>
-            <a href="https://www.linkedin.com/company/world-health-organization" target="_blank"><img
-                    src="images/circle_linkedin_icon.webp" alt="Linkedin Icon" width="40" height="40"></a>
-        </section>
+        <div id="main-content">
+            <section class="contactLocation">
+                <h2>Côte d'Ivoire WHO Office – Contact Information</h2>
+                <h3>WHO Representative in Côte d'Ivoire: Dr. Lucien MANGA</h3>
+                <p><strong>Address: </strong>2 Plateaux – Boulevard des Martyrs</p>
+                <p>01 BP 2494 Abidjan 01, Côte d'Ivoire</p>
+                <p><strong>Telephone:</strong> +225 22 51 72 00</p>
+                <p><strong>Fax:</strong> +225 22 51 72 32</p>
+                <p><strong>Email:</strong> afwcociwr@who.int</p>
+                <a href="https://www.facebook.com/WHO/?locale=fr_FR" target="_blank"><img
+                        src="images/circle_facebook_icon.webp" alt="Facebook Icon" width="40" height="40"></a>
+                <a href="https://www.linkedin.com/company/world-health-organization" target="_blank"><img
+                        src="images/circle_linkedin_icon.webp" alt="Linkedin Icon" width="40" height="40"></a>
+            </section>
 
-        <section class="contactForm">
-            <h2>Send message to WHO Côte d'Ivoire</h2>
-            <form id="contactForm">
-                <label for="firsname">First Name
-                    <input type="text" id="firsname" name="firsname" autocomplete="given-name" placeholder="First Name">
-                </label>
-                <label for="lastname">Last Name
-                    <input type="text" id="lastname" name="lastname" autocomplete="family-name" placeholder="Last Name">
-                </label>
-                <label for="phone">Mobile Contact
-                    <input type="tel" id="phone" name="phone" autocomplete="tel" placeholder="Mobile Contact">
-                </label>
-                <label for="email">Email *
-                    <input type="email" id="email" name="email" autocomplete="email" placeholder="Email" required>
-                </label>
-                <label for="message">Message *
-                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                </label>
+            <section class="contactForm">
+                <h2>Send message to WHO Côte d'Ivoire</h2>
+                <form id="contactForm">
+                    <label for="firsname">First Name
+                        <input type="text" id="firsname" name="firsname" autocomplete="given-name"
+                            placeholder="First Name">
+                    </label>
+                    <label for="lastname">Last Name
+                        <input type="text" id="lastname" name="lastname" autocomplete="family-name"
+                            placeholder="Last Name">
+                    </label>
+                    <label for="phone">Mobile Contact
+                        <input type="tel" id="phone" name="phone" autocomplete="tel" placeholder="Mobile Contact">
+                    </label>
+                    <label for="email">Email *
+                        <input type="email" id="email" name="email" autocomplete="email" placeholder="Email" required>
+                    </label>
+                    <label for="message">Message *
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    </label>
 
-                <input type="submit" value="Send Message">
-            </form>
-        </section>
+                    <input type="submit" value="Send Message">
+                </form>
+            </section>
+        </div>
 
     </main>
     <footer>
