--- a/project/index.html
+++ b/project/index.html
@@ -41,7 +41,7 @@
 
     <main>
 
-        <section class="hero">
+        <section class="hero" id="main-header">
             <picture>
                 <source srcset="images/hero-image-large.webp 1x, images/hero-image-large@2x.webp 2x"
                     media="(min-width: 1024px)" type="image/webp">
@@ -54,82 +54,87 @@
             <h1>Accessible, Reliable Healthcare for All</h1>
         </section>
 
-        <section class="presentation">
-            <img src="images/civ.webp" alt="Cote d'Ivoire map" width="420" height="330" class="img-responsive"
-                loading="lazy">
-            <h2>Cote d'Ivoire</h2>
-            <table>
-                <caption><a href="http://www.who.int/countries/civ/en/" target="_blank" class="more-info">View more Data
-                        & Statistics</a>
-                </caption>
-                <tbody>
-                    <tr>
-                        <td>Total population (2015)</td>
-                        <td>22,702,000</td>
-                    </tr>
-                    <tr>
-                        <td>Gross national income per capita (PPP international $, 2013)</td>
-                        <td>2</td>
-                    </tr>
-                    <tr>
-                        <td>Life expectancy at birth m/f (years, 2015)</td>
-                        <td>52/54</td>
-                    </tr>
-                    <tr>
-                        <td>Probability of dying under five (per 1 000 live births, 0)</td>
-                        <td>n/a</td>
-                    </tr>
-                    <tr>
-                        <td>Probability of dying between 15 abd 60 years m/f (per 1 000 population, 2013)</td>
-                        <td>414/377</td>
-                    </tr>
-                    <tr>
-                        <td>Total expenditure on health per capita (Intl $, 2014)</td>
-                        <td>187</td>
-                    </tr>
-                    <tr>
-                        <td>Total expenditure on health as % of GDP (2014)</td>
-                        <td>5.7</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+        <div id="main-content">
 
-        <section class="health-info-cards">
-
-            <h2>Health Challenges and Vaccination Coverage</h2>
-
-            <section class="card">
-                <h3>Malaria</h3>
-                <img src="images/malaria-picture-for-home.webp" alt="Malaria picture" width="300" height="200"
-                    class="img-responsive" loading="lazy">
-                <p>Malaria remains a significant public health challenge in Côte d'Ivoire, with an incidence of 268
-                    cases per 1,000 inhabitants in 2023. While mortality has decreased by over 50% since 2017, the
-                    disease continues to affect vulnerable populations</p>
-                <a href="https://www.who.int/countries/civ/" class="more-info">Learn more</a>
+            <section class="presentation">
+                <img src="images/civ.webp" alt="Cote d'Ivoire map" class="img-responsive" loading="lazy">
+                <h2>Cote d'Ivoire</h2>
+                <table>
+                    <caption><a href="http://www.who.int/countries/civ/en/" target="_blank" class="more-info">View more
+                            Data
+                            & Statistics</a>
+                    </caption>
+                    <tbody>
+                        <tr>
+                            <td>Total population (2015)</td>
+                            <td>22,702,000</td>
+                        </tr>
+                        <tr>
+                            <td>Gross national income per capita (PPP international $, 2013)</td>
+                            <td>2</td>
+                        </tr>
+                        <tr>
+                            <td>Life expectancy at birth m/f (years, 2015)</td>
+                            <td>52/54</td>
+                        </tr>
+                        <tr>
+                            <td>Probability of dying under five (per 1 000 live births, 0)</td>
+                            <td>n/a</td>
+                        </tr>
+                        <tr>
+                            <td>Probability of dying between 15 abd 60 years m/f (per 1 000 population, 2013)</td>
+                            <td>414/377</td>
+                        </tr>
+                        <tr>
+                            <td>Total expenditure on health per capita (Intl $, 2014)</td>
+                            <td>187</td>
+                        </tr>
+                        <tr>
+                            <td>Total expenditure on health as % of GDP (2014)</td>
+                            <td>5.7</td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
 
-            <section class="card">
-                <h3>Polio</h3>
-                <img src="images/polio-picture-for-home.webp" alt="Children with polio picture" width="300" height="200"
-                    class="img-responsive" loading="lazy">
-                <p>Polio remains a concern in Côte d’Ivoire due to vaccine-derived virus strains. In 2024, over 9
-                    million children were vaccinated in nationwide campaigns to stop the spread.</p>
-                <a href="https://www.who.int/countries/civ/" class="more-info">Learn more</a>
+            <section class="health-info-cards">
+
+                <h2>Health Challenges and Vaccination Coverage</h2>
+
+                <section class="card">
+                    <h3>Malaria</h3>
+                    <img src="images/malaria-picture-for-home.webp" alt="Malaria picture" class="img-responsive"
+                        loading="lazy">
+                    <p>Malaria remains a significant public health challenge in Côte d'Ivoire, with an incidence of 268
+                        cases per 1,000 inhabitants in 2023. While mortality has decreased by over 50% since 2017, the
+                        disease continues to affect vulnerable populations</p>
+                    <a href="https://www.who.int/countries/civ/" class="more-info">Learn more</a>
+                </section>
+
+                <section class="card">
+                    <h3>Polio</h3>
+                    <img src="images/polio-picture-for-home.webp" alt="Children with polio picture"
+                        class="img-responsive" loading="lazy">
+                    <p>Polio remains a concern in Côte d’Ivoire due to vaccine-derived virus strains. In 2024, over 9
+                        million children were vaccinated in nationwide campaigns to stop the spread.</p>
+                    <a href="https://www.who.int/countries/civ/" class="more-info">Learn more</a>
+                </section>
+
+                <section class="card">
+                    <h3>Vaccination</h3>
+                    <img src="images/vaccination-picture-for-home.webp" alt="Children vaccinated picture" width="300"
+                        height="200" class="img-responsive" loading="lazy">
+                    <p>As of 2019, approximately 76% of children in Côte d'Ivoire received all three doses of the
+                        diphtheria, tetanus, and pertussis (DTP3) vaccine. Measles vaccination coverage for children
+                        aged
+                        12–23 months was 70% in 2020. These figures indicate progress but also highlight areas needing
+                        improvement</p>
+                    <a href="https://www.who.int/countries/civ/" class="more-info">Learn more</a>
+                </section>
+
             </section>
 
-            <section class="card">
-                <h3>Vaccination</h3>
-                <img src="images/vaccination-picture-for-home.webp" alt="Children vaccinated picture" width="300"
-                    height="200" class="img-responsive" loading="lazy">
-                <p>As of 2019, approximately 76% of children in Côte d'Ivoire received all three doses of the
-                    diphtheria, tetanus, and pertussis (DTP3) vaccine. Measles vaccination coverage for children aged
-                    12–23 months was 70% in 2020. These figures indicate progress but also highlight areas needing
-                    improvement</p>
-                <a href="https://www.who.int/countries/civ/" class="more-info">Learn more</a>
-            </section>
-
-        </section>
+        </div>
 
         <dialog id="dialogBox">
             <div>
@@ -138,8 +143,8 @@
             </div>
             <p></p>
         </dialog>
-    </main>
 
+    </main>
     <footer>
         <p>&copy;<span id="currentYear"></span></p>
         <p>WDD 231 - Final Project | Kouame Alexandre Paul - Abidjan, Cote d'Ivoire</p>
