update portofio website by adding web development certificates courses

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <img src="images/profile.webp" alt="Profile picture">
             <span>Kouame Alexandre Paul</span>
         </div>
-        <a href="#" id="menu"></a>
+        <a href="#" id="menu" title="Hamburger"></a>
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="chamber/index.html">Chamber</a></li>
+                <li><a href="chamber/index.html" target="_blank">Chamber</a></li>
                 <li><a href="https://github.com/Delpipi" target="_blank">Github Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/alexandre-paul-kouame-b700a810b/" target="_blank">LinkedIn</a>
                 </li>
@@ -47,14 +47,14 @@
 
             <section class="card">
                 <div class="card-header">
-                    <h2>Course work</h2>
+                    <h2>Outcomes</h2>
                 </div>
                 <div class="card-body">
                     <ul>
-                        <li>Write programs to accomplish meaningful tasks in a variety of domains.</li>
-                        <li>Design websites that are visually appealing and effective.</li>
-                        <li>Develop dynamic webpages that follow standards and best practices.</li>
-                        <li>Learn and apply new technology and techniques in future programming.</li>
+                        <li>Design website that are visually appealing and follow industry standards</li>
+                        <li>Develop applications in a variety of languages and platforms</li>
+                        <li>Develop dynamic, data-driven web applications using both relational and NoSQL databases.</li>
+                        <li>Demonstrate the traits of an effective team member.</li>
                     </ul>
                 </div>
             </section>
@@ -71,6 +71,13 @@
         </div>
 
         <div class="block2">
+            <h2 class="block-title">Certificates</h2>
+            <div class="certificate-status">
+                <ul>
+                    <li><span class="completed"></span> Completed</li>
+                    <li><span class="incomplete"></span> Incomplete</li>
+                </ul>
+            </div>
             <div id="certicateList"></div>
         </div>
 
